tests/ui/generic-associated-types/issue-87258_a.stderr
error: item does not constrain `<&'c mut S as Trait2>::FooFuture::{opaque#0}`
  --> $DIR/issue-87258_a.rs:18:8
   |
LL |     fn foo<'a>() -> Self::FooFuture<'a> {
   |        ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/issue-87258_a.rs:17:26
   |
LL |     type FooFuture<'a> = impl Trait1;
   |                          ^^^^^^^^^^^

error: aborting due to 1 previous error

